customization panel success

--- a/ProjectUbuild/Views/FullHouse/HouseDesign.cshtml
+++ b/ProjectUbuild/Views/FullHouse/HouseDesign.cshtml
@@ -18,7 +18,7 @@
                     <li>
                         @Html.ActionLink("Home", "Index", "Home", new { }, null)
                     </li>
-                    <li class="active">Apply for Loan</li>
+                    <li class="active">Home Design</li>
                 </ol>
             </div>
         </div>
@@ -43,7 +43,7 @@
                                 <div class="row">
                                     <div class="col-md-3">
                                         <div class="form-group form-group-default form-group-default-select2 " style="height: 60px">
-                                            <label class="">Select customizable component</label>
+                                            <label class="">Select customizable</label>
                                             <select class="full-width select2-hidden-accessible" data-placeholder="Select Door" data-init-plugin="select2" tabindex="-1" aria-hidden="true">
                                                 <option value="WA">Door type 1</option>
                                                 <option value="WA">Door type 2</option>
@@ -95,7 +95,7 @@
         </div>
 
         <div class="col-md-3" id="sidebar_design">
-            <div class="panel panel-danger">
+            <div class="panel panel-success">
                 <div class="panel-heading">
                     <h3>Base house cost + Customizations</h3>
                     <h3>= $ 130,000</h3>
