--- a/ProjectUbuild/Views/FullHouse/HouseDesign.cshtml
+++ b/ProjectUbuild/Views/FullHouse/HouseDesign.cshtml
@@ -33,11 +33,12 @@
             <div class="row">
                 <div class="panel panel-danger">
                     <div class="panel-body">
-                        <div class="col-md-12">
-                            <img src="/images/1.jpeg" class="img-responsive img-rounded" alt="Cinque Terre" style="width: 50%; height: auto">
+                        <div class="col-md-12" style="height: 530px">
+                            <img src="/images/1.jpeg" class="img-responsive img-rounded" alt="Cinque Terre" 
+                                 style="width: 50%; height: auto;transform: rotate(90deg) translateY(-177px) translateX(-185px)">
                         </div>
                     </div>
-                    <div class="panel-footer">
+                    <div class="panel-footer" >
                         <div class="row">
                             <div class="col-md-12">
                                 <div class="row">
@@ -58,7 +59,7 @@
                                             </span>
                                         </div>
                                     </div>
-                                    <div class="col-md-9">
+                                    <div class="col-md-9" style="max-height: 330px;overflow: scroll">
                                         <select class="image-picker show-html" data-ng-model="vm.itemSelected">
                                             <option data-img-src="/images/saple.jpg" data-img-class="first" data-img-alt="Page 1" value="1">  Page 1  </option>
                                             <option data-img-src="/images/saple.jpg" data-img-alt="Page 2" value="3">  Page 2  </option>
