full house scroll

--- a/ProjectUbuild/Views/FullHouse/HouseDesign.cshtml
+++ b/ProjectUbuild/Views/FullHouse/HouseDesign.cshtml
@@ -59,7 +59,7 @@
                                             </span>
                                         </div>
                                     </div>
-                                    <div class="col-md-9" style="max-height: 330px;overflow: scroll">
+                                    <div class="col-md-9" style="max-height: 310px;overflow: auto">
                                         <select class="image-picker show-html" data-ng-model="vm.itemSelected">
                                             <option data-img-src="/images/saple.jpg" data-img-class="first" data-img-alt="Page 1" value="1">  Page 1  </option>
                                             <option data-img-src="/images/saple.jpg" data-img-alt="Page 2" value="3">  Page 2  </option>
