--- a/ProjectUbuild/assets/plugins/image-picker/image-picker.css
+++ b/ProjectUbuild/assets/plugins/image-picker/image-picker.css
@@ -5,6 +5,7 @@ ul.thumbnails.image_picker_selector {
     list-style-type: none;
     padding: 0px;
     margin: 0px;
+    position: relative;
 }
 
     ul.thumbnails.image_picker_selector ul {
@@ -48,3 +49,41 @@ ul.thumbnails.image_picker_selector {
             ul.thumbnails.image_picker_selector li .thumbnail.selected {
                 background: #0088cc;
             }
+.image_picker_image {
+
+}
+
+.image {
+    opacity: 1;
+    display: block;
+    width: 100%;
+    height: auto;
+    transition: .5s ease;
+    backface-visibility: hidden;
+}
+
+.middle {
+    transition: .5s ease;
+    opacity: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    text-align: center;
+}
+
+.container:hover .image {
+    opacity: 0.3;
+}
+
+.container:hover .middle {
+    opacity: 1;
+}
+
+.text {
+    background-color: #4CAF50;
+    color: white;
+    font-size: 16px;
+    padding: 16px 32px;
+}
