--- a/ProjectUbuild/Views/FullHouse/HouseDesign.cshtml
+++ b/ProjectUbuild/Views/FullHouse/HouseDesign.cshtml
@@ -59,30 +59,9 @@
                                     </div>
                                     <div class="col-md-9" style="max-height: 310px; overflow: auto;">
                                         <select class="image-picker show-html">
-                                            <option data-ng-repeat="ff in vvm.fixtureFittings" data-img-src="/images/{{ff.ItemImage}}" data-img-alt="Page 1" value="1" data-ng-click="vm.fixtureSelected(ff)">{{ff.ItemDescription}}</option>
+                                            <option data-ng-repeat="ff in vvm.fixtureFittings" data-img-src="/images/1.jpeg" data-img-alt="Page 1" value="1" data-ng-click="vm.fixtureSelected(ff)">{{ff.ItemDescription}}</option>
 
-                                            <option data-img-src="/images/saple.jpg" data-img-class="first" data-img-alt="Page 1" value="1">  Page 1  </option>
-                                            <option data-img-src="/images/saple.jpg" data-img-alt="Page 2" value="3">  Page 2  </option>
-                                            <option data-img-src="/images/saple.jpg" data-img-alt="Page 1" value="4">  Page 1  </option>
-                                            <option data-img-src="/images/saple.jpg" data-img-alt="Page 2" value="5">  Page 2  </option>
-                                            <option data-img-src="/images/saple.jpg" data-img-alt="Page 1" value="6">  Page 1  </option>
-                                            <option data-img-src="/images/saple.jpg" data-img-alt="Page 2" value="7">  Page 2  </option>
-                                            <option data-img-src="/images/saple.jpg" data-img-alt="Page 1" value="9">  Page 1  </option>
-                                            <option data-img-src="/images/saple.jpg" data-img-alt="Page 2" value="10">  Page 2  </option>
-                                            <option data-img-src="/images/saple.jpg" data-img-alt="Page 1" value="11">  Page 1  </option>
-                                            <option data-img-src="/images/saple.jpg" data-img-alt="Page 2" value="12">  Page 2  </option>
-                                            <option data-img-src="/images/saple.jpg" data-img-alt="Page 1" value="13">  Page 1  </option>
-                                            <option data-img-src="/images/saple.jpg" data-img-alt="Page 2" value="14">  Page 2  </option>
-                                            <option data-img-src="/images/saple.jpg" data-img-alt="Page 1" value="15">  Page 1  </option>
-                                            <option data-img-src="/images/saple.jpg" data-img-alt="Page 2" value="26">  Page 2  </option>
-                                            <option data-img-src="/images/saple.jpg" data-img-alt="Page 1" value="17">  Page 1  </option>
-                                            <option data-img-src="/images/saple.jpg" data-img-alt="Page 2" value="28">  Page 2  </option>
-                                            <option data-img-src="/images/saple.jpg" data-img-alt="Page 1" value="19">  Page 1  </option>
-                                            <option data-img-src="/images/saple.jpg" data-img-alt="Page 2" value="27">  Page 2  </option>
-                                            <option data-img-src="/images/saple.jpg" data-img-alt="Page 1" value="29">  Page 1  </option>
-                                            <option data-img-src="/images/saple.jpg" data-img-alt="Page 2" value="30">  Page 2  </option>
-                                            <option data-img-src="/images/saple.jpg" data-img-alt="Page 1" value="21">  Page 1  </option>
-                                            <option data-img-src="/images/saple.jpg" data-img-alt="Page 2" value="22">  Page 2  </option>
+                                             
                                         </select>
                                     </div>
                                 </div>
