changed sigin to login

--- a/ProjectUbuild/Views/Account/Login.cshtml
+++ b/ProjectUbuild/Views/Account/Login.cshtml
@@ -54,7 +54,7 @@
                             @Html.LabelFor(m => m.RememberMe)
                         </p>
                         @Html.ActionLink("Forgot your password?", "ForgotPassword")
-                        <p>
+                        <p class="h4 bold">
                             @Html.ActionLink("Register as a new user", "Register")
                         </p> 
 
