Password reset complete

--- a/ProjectUbuild/Views/Account/ForgotPasswordConfirmation.cshtml
+++ b/ProjectUbuild/Views/Account/ForgotPasswordConfirmation.cshtml
@@ -1,13 +1,30 @@
 ﻿@{
     ViewBag.Title = "Forgot Password Confirmation";
+    Layout = "~/views/shared/_Layout.cshtml";
 }
+ 
 
-<hgroup class="title">
-    <h1>@ViewBag.Title.</h1>
-</hgroup>
-<div>
-    <p>
-        Please check your email to reset your password.
-    </p>
-</div>
+<section class="cover fullscreen image-bg overlay">
+    <div class="background-image-holder">
+        <img alt="image" class="background-image" src="~/pages/img/ghl-logo.jpg" />
+    </div>
+    <div class="container v-align-transform">
+        <div class="row">
+            <div class="col-md-4 col-md-offset-4 col-sm-8 col-sm-offset-2">
+                <div class="feature bordered text-center">
+                     
+                    <div class="alert alert-info">
+                        <h4 class="uppercase"> Please check your email to reset your password.</h4>
+                    </div>
+                    <!-- START Login Form --> 
+                </div>
+            </div>
+        </div>
+        <!--end of row-->
+    </div>
+    <!--end of container-->
+</section>
+
+
+
 	
