--- a/ProjectUbuild/Views/Account/ForgotPassword.cshtml
+++ b/ProjectUbuild/Views/Account/ForgotPassword.cshtml
@@ -1,29 +1,38 @@
 ﻿@model ProjectUbuild.Models.ForgotPasswordViewModel
 @{
     ViewBag.Title = "Forgot your password?";
+    Layout = "~/views/shared/_Layout.cshtml";
 }
+ 
 
-<h2>@ViewBag.Title.</h2>
-
-@using (Html.BeginForm("ForgotPassword", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
-{
-    @Html.AntiForgeryToken()
-    <h4>Enter your email.</h4>
-    <hr />
-    @Html.ValidationSummary("", new { @class = "text-danger" })
-    <div class="form-group">
-        @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
-            @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
-        </div>
+<section class="cover fullscreen image-bg overlay">
+    <div class="background-image-holder">
+        <img alt="image" class="background-image" src="~/pages/img/ghl-logo.jpg" />
     </div>
-    <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
-            <input type="submit" class="btn btn-default" value="Email Link" />
-        </div>
-    </div>
-}
+    <div class="container v-align-transform">
+        <div class="row">
+            <div class="col-md-4 col-md-offset-4 col-sm-8 col-sm-offset-2">
+                <div class="feature bordered text-center">
+                    <h4 class="uppercase">@ViewBag.Title</h4>
 
-@section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
-}
+
+                    <!-- START Login Form -->
+                    @using (Html.BeginForm("ForgotPassword", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "text-left", role = "form", id = "form-login" }))
+                    {
+                        @Html.AntiForgeryToken()
+                        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                        @Html.TextBoxFor(m => m.Email, new { @class = "form-control", placeholder = "Email" })
+                        @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })
+                        
+
+                        <input type="submit" value="Email Link" />
+                         
+                    }
+
+                </div>
+            </div>
+        </div>
+        <!--end of row-->
+    </div>
+    <!--end of container-->
+</section>
