--- a/ProjectUbuild/Views/Account/ResetPasswordConfirmation.cshtml
+++ b/ProjectUbuild/Views/Account/ResetPasswordConfirmation.cshtml
@@ -1,12 +1,25 @@
 ﻿@{
     ViewBag.Title = "Reset password confirmation";
 }
+ 
 
-<hgroup class="title">
-    <h1>@ViewBag.Title.</h1>
-</hgroup>
-<div>
-    <p>
-        Your password has been reset. Please @Html.ActionLink("click here to log in", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })
-    </p>
-</div>
+<section class="cover fullscreen image-bg overlay">
+    <div class="background-image-holder">
+        <img alt="image" class="background-image" src="~/pages/img/ghl-logo.jpg" />
+    </div>
+    <div class="container v-align-transform">
+        <div class="row">
+            <div class="col-md-4 col-md-offset-4 col-sm-8 col-sm-offset-2">
+                <div class="feature bordered text-center">
+
+                    <div class="alert alert-info">
+                        <h4 class="uppercase">  Your password has been reset. Please @Html.ActionLink("click here to log in", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" }).</h4>
+                    </div>
+                    <!-- START Login Form -->
+                </div>
+            </div>
+        </div>
+        <!--end of row-->
+    </div>
+    <!--end of container-->
+</section>
