--- a/ProjectUbuild/assets/foundry/css/custom.css
+++ b/ProjectUbuild/assets/foundry/css/custom.css
@@ -565,3 +565,165 @@ div.cs-skin-slide .cs-options ul li span {
     width: 125px;
 
 }
+
+@media (min-width: 1280px) 
+.rh_prop_card .rh_prop_card__details {
+    padding: 2.5rem;
+}
+
+@media (min-width: 1140px) 
+.rh_prop_card .rh_prop_card__details {
+    padding: 2rem;
+}
+
+@media (min-width: 1024px) 
+
+.rh_prop_card .rh_prop_card__details {
+    padding: 2rem;
+}
+
+@media (min-width: 768px)
+.rh_prop_card .rh_prop_card__details {
+    padding: 2.5rem;
+}
+
+@media (min-width: 480px) 
+.rh_prop_card .rh_prop_card__details {
+    padding: 2.5rem;
+}
+
+@media (min-width: 320px) 
+.rh_prop_card .rh_prop_card__details {
+    padding: 2rem;
+}
+
+.rh_prop_card .rh_prop_card__details {
+    display: block;
+    width: 100%;
+    background: #fff;
+    padding: 30px;
+    text-align: left;
+}
+
+rh_prop_card .rh_prop_card__details .rh_prop_card__meta_wrap {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: start;
+    -webkit-justify-content: flex-start;
+    -ms-flex-pack: start;
+    justify-content: flex-start;
+    -webkit-box-align: start;
+    -webkit-align-items: flex-start;
+    -ms-flex-align: start;
+    align-items: flex-start;
+    -webkit-flex-wrap: wrap;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    margin-bottom: 0.5rem;
+}
+
+@media (min-width: 1280px) 
+.rh_prop_card .rh_prop_card__details .rh_prop_card__meta {
+    padding: 0 1.5rem 1.5rem 0;
+}
+
+@media (min-width: 1140px) 
+.rh_prop_card .rh_prop_card__details .rh_prop_card__meta {
+    padding: 0 1rem 1rem 0;
+}
+
+@media (min-width: 1024px) 
+.rh_prop_card .rh_prop_card__details .rh_prop_card__meta {
+    padding: 0 1rem 1rem 0;
+}
+
+@media (min-width: 768px) 
+.rh_prop_card .rh_prop_card__details .rh_prop_card__meta {
+    padding: 0 1rem 1rem 0;
+}
+
+@media (min-width: 480px) 
+.rh_prop_card .rh_prop_card__details .rh_prop_card__meta {
+    padding: 0 1.5rem 1.5rem 0;
+}
+
+@media (min-width: 320px) 
+.rh_prop_card .rh_prop_card__details .rh_prop_card__meta {
+    padding: 0 1rem 1rem 0;
+}
+
+.rh_prop_card .rh_prop_card__details .rh_prop_card__meta {
+    padding: 0 1.5rem 1.5rem 0;
+}
+
+@media (min-width: 1280px) 
+.rh_prop_card .rh_prop_card__details .rh_prop_card__meta {
+    padding: 0 1.5rem 1.5rem 0;
+}
+
+@media (min-width: 1140px) 
+.rh_prop_card .rh_prop_card__details .rh_prop_card__meta {
+    padding: 0 1rem 1rem 0;
+}
+
+@media (min-width: 1024px) 
+.rh_prop_card .rh_prop_card__details .rh_prop_card__meta {
+    padding: 0 1rem 1rem 0;
+}
+
+@media (min-width: 768px) 
+.rh_prop_card .rh_prop_card__details .rh_prop_card__meta {
+    padding: 0 1rem 1rem 0;
+}
+
+@media (min-width: 480px) 
+.rh_prop_card .rh_prop_card__details .rh_prop_card__meta {
+    padding: 0 1.5rem 1.5rem 0;
+}
+
+@media (min-width: 320px) 
+.rh_prop_card .rh_prop_card__details .rh_prop_card__meta {
+    padding: 0 1rem 1rem 0;
+}
+
+.rh_prop_card .rh_prop_card__details .rh_prop_card__meta {
+    padding: 0 1.5rem 1.5rem 0;
+}
+
+    .rh_prop_card .rh_prop_card__details .rh_prop_card__meta svg {
+        fill: #b3b3b3;
+    }
+
+svg:not(:root) {
+    overflow: hidden;
+}
+
+.rh_svg {
+    fill: #1ea69a;
+}
+
+.rh_prop_card .rh_prop_card__details .rh_prop_card__meta .figure {
+    font-size: 1.3rem;
+    font-weight: 500;
+    padding: 0 0 0 1rem;
+    line-height: 1.2;
+}
+
+.rh_prop_card .rh_prop_card__details .rh_prop_card__meta h4 {
+    font-size: 1.3rem;
+    font-weight: 500;
+    margin: 0;
+    margin-bottom: 1rem;
+}
+
+.rh_prop_card .rh_prop_card__details .rh_prop_card__meta .label {
+    font-size: 1.3rem;
+    padding: 0 0 0 0.3rem;
+    font-weight: 400;
+    line-height: 1.2;
+}
+.rh_prop_card__priceLabel h4{
+    margin-bottom: 10px
+}
