--- a/ProjectUbuild/Views/Shared/_Head.cshtml
+++ b/ProjectUbuild/Views/Shared/_Head.cshtml
@@ -23,5 +23,6 @@
 <link href="~/assets/plugins/bootstrap-daterangepicker/daterangepicker-bs3.css" rel="stylesheet" type="text/css" media="screen">
 <link href="~/assets/plugins/bootstrap-timepicker/bootstrap-timepicker.min.css" rel="stylesheet" type="text/css" media="screen">
 <link href="~/assets/plugins/image-picker/image-picker.css" rel="stylesheet" />
+<link href="~/Scripts/jquery-intl-tel-input/css/intlInputPhone.css" rel="stylesheet" />
 @*<link href="~/pages/css/pages.min.css" rel="stylesheet" />*@
 <link href="~/pages/css/pages-icons.css" rel="stylesheet" />
