--- a/ProjectUbuild/Views/Shared/_Scripts.cshtml
+++ b/ProjectUbuild/Views/Shared/_Scripts.cshtml
@@ -47,6 +47,7 @@
 <script src="~/assets/plugins/ion-slider/js/ion.rangeSlider.min.js" type="text/javascript"></script>
 <script src="~/assets/plugins/jquery-nouislider/jquery.nouislider.min.js" type="text/javascript"></script>
 <script src="~/assets/plugins/jquery-nouislider/jquery.liblink.js" type="text/javascript"></script>
+<script src="~/Scripts/jquery-intl-tel-input/js/intlInputPhone.js"></script>
 <!-- END VENDOR JS -->
 <script src="~/assets/foundry/js/flickr.js"></script>
 <script src="~/assets/foundry/js/flexslider.min.js"></script>
